k8s/qbittorrent/deploy_qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-app # Adjust deployment name as needed
spec:
  replicas: 1 # Adjust replica count as needed
  selector:
    matchLabels:
      app: qbittorrent-app
  strategy:
    type: Recreate  # Adjust strategy as needed
  template:
    metadata:
      labels:
        app: qbittorrent-app
    spec:
      containers:
      - name: qbittorrent-app
        image: lscr.io/linuxserver/qbittorrent:5.0.0  # Adjust with custom or latest Docker image
        ports:
        - containerPort: 9092 # Adjust port as needed
          protocol: TCP
        - containerPort: 51414 # Adjust port as needed
          protocol: TCP
        - containerPort: 51414 # Adjust port as needed
          protocol: UDP
        volumeMounts:
        - name: appdata # Adjust volume name as needed
          mountPath: /config  # Default path for mounting inside container
        - name: downloads # Adjust volume name as needed
          mountPath: /downloads  # Default path for mounting inside container
      volumes:
      - name: appdata
        hostPath:
          path: /custom/path/to/qbittorrent/appdata
      - name: downloads
        hostPath:
          path: /custom/path/to/qbittorrent/downloads
